# mcp-foundry

./: .env-sample  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: azure-ai-agent-service-mcp-server.md  azure-ai-foundry-catalog-mcp-server.md  azure-ai-foundry-labs-mcp-server.md
src/python/: README.md  pyproject.toml  requirements.txt  setup.py
src/python/azure_agent_mcp_adapter/: __init__.py  __main__.py
src/python/azure_agent_mcp_server/: __main__.py
src/python/azure_agent_mcp_server/mcp_server_for_foundry_models/: __main__.py
src/python/azure_ai_foundry_mcps/azure_ai_foundry_labs_mcp_server/: __main__.py
src/python/azure_ai_foundry_mcps/azure_ai_foundry_models_mcp_server/: __main__.py
src/python/azure_foundry_mcps/azure_agent_mcp_server/: __main__.py
src/python/mcp_server_azure_ai_agent/: __init__.py  __main__.py
src/python/mcp_server_for_foundry_labs/: README.md  __main__.py  hello.py  pyproject.toml
src/python/mcp_server_for_foundry_labs/src/mcp_server_for_foundry_labs/: __main__.py
src/python/mcp_server_for_foundry_models/: README.md  __main__.py
src/python/mcp_server_for_gh_models/: README.md  __main__.py
src/typescript/: package-lock.json  package.json
src/typescript/src/: index.ts
