[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-foundry-mcps"
version = "0.1.1"
description = "Azure AI Agent Service MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp~=1.4.1",
    "azure-identity~=1.21.0",
    "python-dotenv~=1.0.1",
    "azure-ai-projects~=1.0.0b7",
    "aiohttp>=3.11.14",
]

[project.scripts]
azure-agent-mcp-server = "azure-foundry-mcps.azure_agent_mcp_server.__main__:main"
mcp-server-for-foundry-labs = "azure-foundry-mcps.mcp_server_for_foundry_labs.__main__:main"
mcp-server-for-foundry-models= "azure-foundry-mcps.mcp_server_for_foundry_models.__main__:main"

[[tool.uv.index]]
name = "tnrdev"
url = "https://pkgs.dev.azure.com/tnrdev/_packaging/tnrdev/pypi/simple/"
publish-url = "https://pkgs.dev.azure.com/tnrdev/_packaging/tnrdev/pypi/upload/"
default = true
