[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-foundry-mcps"
version = "0.1.2"
description = "Azure AI Agent Service MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp~=1.4.1",
    "azure-identity~=1.21.0",
    "python-dotenv~=1.0.1",
    "azure-ai-projects~=1.0.0b7",
    "aiohttp>=3.11.14",
]

[project.scripts]
azure-agent-mcp-server = "azure_ai_foundry_mcps.azure_agent_mcp_server.__main__:main"
azure-ai-foundry-labs-mcp-server = "azure_ai_foundry_mcps.azure_ai_foundry_labs_mcp_server.__main__:main"
azure-ai-foundry-models-mcp-server = "azure_ai_foundry_mcps.azure_ai_foundry_models_mcp_server.__main__:main"